--- a/index.html
+++ b/index.html
@@ -194,6 +194,24 @@
 
     <script>
     $(document).ready(function() {
+        // --- Anti-Inspect Script ---
+        // Disable right-click
+        $(document).on('contextmenu', function(e) {
+            e.preventDefault();
+        });
+
+        // Disable common developer tool shortcuts
+        $(document).on('keydown', function(e) {
+            if (e.keyCode == 123 || // F12
+                (e.ctrlKey && e.shiftKey && e.keyCode == 73) || // Ctrl+Shift+I
+                (e.ctrlKey && e.shiftKey && e.keyCode == 74) || // Ctrl+Shift+J
+                (e.ctrlKey && e.shiftKey && e.keyCode == 67) || // Ctrl+Shift+C
+                (e.ctrlKey && e.keyCode == 85)) { // Ctrl+U
+                e.preventDefault();
+            }
+        });
+
+
         // --- Mode Toggle Logic ---
         const modeToggle = $('#mode-toggle');
         const professionalContent = $('#professional-content');
